--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Andrew Dickson
-email: amdickson128[at]gmail.com
+email: amdickson128 [at] gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   My website for code, info, and a few projects. 
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -26,7 +26,7 @@ github_username:  amdson
 markdown: kramdown
 theme: minima
 
-include: [_posts, _pages]
+include: [_pages]
 
 defaults:
   -
